--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +15,22 @@
         android:theme="@style/Theme.JajanYuk"
         tools:targetApi="31">
         <activity
-            android:name=".ui.auth.register.RegisterActivity"
+            android:name=".ui.pedagang.HomePedagangActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.auth.register.pedagang.RegisterPedagangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.register.pedagang.RegisterMerchantAcitivty"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.register.pembeli.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.register.ChooseRegisterActivity"
@@ -24,11 +41,7 @@
         <activity
             android:name=".ui.splash.SplashScreenActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
