--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.JajanYuk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.pembeli.HomePagePembeliActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.pedagang.HomePedagangActivity"
             android:exported="true">
             <intent-filter>
@@ -40,9 +43,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.splash.SplashScreenActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
