--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:theme="@style/Theme.JajanYuk"
         tools:targetApi="31">
         <activity
-            android:name=".ui.pembeli.DetailPedagangActivity"
+            android:name=".ui.pembeli.RingkasanPembelianActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.pembeli.pembayaran_premium_activity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.pembeli.pembayaran_activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,13 +30,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.pembeli.DetailPedagangActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.pembeli.HomePagePembeliActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.pedagang.HomePedagangActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.auth.register.pedagang.RegisterPedagangActivity"
             android:exported="false" />
@@ -48,7 +55,7 @@
             android:exported="true" />
         <activity
             android:name=".ui.splash.SplashScreenActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
