--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,24 @@
         android:theme="@style/Theme.JajanYuk"
         tools:targetApi="31">
         <activity
-            android:name=".ui.pembeli.RingkasanPembelianActivity"
+            android:name=".ui.pembeli.PesananBerhasilActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.pembeli.RingkasanPembelianActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.pembeli.pembayaran_premium_activity"
             android:exported="false" />
         <activity
             android:name=".ui.pembeli.pembayaran_activity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.pembeli.DetailPedagangActivity"
