--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.JajanYuk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.pembeli.RiwayatTransaksiActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.pembeli.EditPasswordFinishedActivity"
             android:exported="false" />
         <activity
